# sqlmesh-open-metadata

./: CONVERSION_SUMMARY.md  README.md  docker-compose.yml  example_config.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/sqlmesh_openlineage/: __init__.py  console.py  datasets.py  emitter.py  facets.py  install.py
tests/: conftest.py  test_console.py  test_datasets.py  test_integration.py
